# cpp4c

./: README.md  meson.build  meson.options
demos/: meson.build  smartptr.c
include/: c_cpp_std_lib_ver1.h
include/classes/: classes__c.h
include/cpp4c/: smartptr.h
include/string/: string__c.c  string__c.h
include/vector/: vector__c.c  vector__c.h
src/: smartptr.c
